yaml/config-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-svc
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: config-files
