yaml/app-ingress-route.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # certmanager.k8s.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # tls:
  # - hosts:
  #   - sh360-api-d1.eastus.cloudapp.azure.com
  #   secretName: tls-secret
  rules:
  - host: sh360-api-d2.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /ng
        backend:
          serviceName: nginx-hello-svc
          servicePort: 80
      - path: /wt
        backend:
          serviceName: webapitest-svc
          servicePort: 80
      - path: /hotels-api
        backend:
          serviceName: hotels
          servicePort: 80
      - path: /bookings-api
        backend:
          serviceName: bookings
          servicePort: 80
      - path: /suggestions-api
        backend:
          serviceName: suggestions
          servicePort: 80
      - path: /configuration-api 
        backend:
          serviceName: config
          servicePort: 80          
      - path: /tasks-api
        backend:
          serviceName: tasks
          servicePort: 80
      - path: /notifications-api
        backend:
          serviceName: notifications
          servicePort: 80          
      - path: /reviews-api
        backend:
          serviceName: reviews
          servicePort: 80
      - path: /discounts-api
        backend:
          serviceName: discounts
          servicePort: 80
      - path: /profiles-api
        backend:
          serviceName: profiles
          servicePort: 80
      - path: /cfg
        backend:
          serviceName: config-svc
          servicePort: 80
